--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" href="test.css">
-</head>
-<body>
+<section class="parallax-container">
+      <h1>Cerro Torre</h1>
+      <p>
+        Cerro Torre is a mountain of sheer beauty whose spectacular attributes
+        make it an unique gem in Argentina.
+      </p>
+    </section>
 
-<h1>This is a new heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
+    <section class="buffer"></section>
