--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<section class="parallax-container">
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+      <section class="parallax-container">
       <h1>Cerro Torre</h1>
       <p>
         Cerro Torre is a mountain of sheer beauty whose spectacular attributes
@@ -7,3 +13,11 @@
     </section>
 
     <section class="buffer"></section>
+      
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
+
+
