--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
 <body>
 
       <section class="parallax-container">
-      <h1>Cerro Torre</h1>
-      <p>
-        Cerro Torre is a mountain of sheer beauty whose spectacular attributes
-        make it an unique gem in Argentina.
-      </p>
+        <h1>Advances in Geometry and </h1>
+      <p>July 13-16, 2026 at Temple University, Philadelphia</p>
     </section>
-
-    <section class="buffer"></section>
     
 
 </body>
