--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
       <section class="parallax-container">
-        <h1>Advances in Geometry and </h1>
+        <h1>Advances in Geometry and Quantum Topology</h1>
       <p>July 13-16, 2026 at Temple University, Philadelphia</p>
     </section>
     
