--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <section class="parallax-container">
         <h1>Advances in Geometry and Quantum Topology</h1>
       <p>July 13-16, 2026 at Temple University, Philadelphia</p>
+      <tr><td>Registration &amp; Funding</td><td>Conference Schedule</td><td>Travel</td><td>Local Information</td></tr>
     </section>
     
 
