--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       <section class="parallax-container">
       <p>July 13-16, 2026 at Temple University, Philadelphia</p>
       <tr><td>Registration &amp; Funding</td><td>Conference Schedule</td><td>Travel</td><td>Local Information</td></tr>
+      
+      <p>Organizers: Dave Futer (Temple University), Renaud Detcherry (Institut de Mathématiques de Bourgogne), Chris Cornwell (Towson University), Christine Ruey Shan Lee (Texas State University)</p>
     </section>
     
 
