--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
       <section class="parallax-container">
-      <h1 style=color: white>Advances in Geometry and Quantum Topology</h1>
+      <h1 style>Advances in Geometry and Quantum Topology</h1>
       <p>July 13-16, 2026 at Temple University, Philadelphia</p>
       <tr><td>Registration &amp; Funding</td><td>Conference Schedule</td><td>Travel</td><td>Local Information</td></tr>
       
