--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <link rel="stylesheet" href="test.css">
 </head>
 <body>
-            <h1>Advances in Geometry and Quantum Topology</h1>
+      <section>     
+      <h1>Advances in Geometry and Quantum Topology</h1>
+      </section>
  
       <section class="parallax-container">
       <p>July 13-16, 2026 at Temple University, Philadelphia</p>
