--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body>
       <section class="parallax-container">
       <h1>Advances in Geometry and Quantum Topology</h1>
-        
       <p>July 13-16, 2026 at Temple University, Philadelphia</p>      
+      <tr>Registration and Funding<td></td></trd></tr>
       <p>Organizers: Dave Futer (Temple University), Renaud Detcherry (Institut de Mathématiques de Bourgogne), Chris Cornwell (Towson University), Christine Ruey Shan Lee (Texas State University)</p>
     </section>
     
